--- a/src/components/Newsletter.css
+++ b/src/components/Newsletter.css
@@ -56,7 +56,7 @@
 } 
 
 .tbox{
-   width: 260px;
+   width: 180px;
   padding: 0 10px;
 }
 
